# RUST-CRUD

./: Cargo.toml  README.md
migrations/: 20241007181201_create_posts_table.down.sql  20241007181201_create_posts_table.up.sql
src/: Entities.rs  crud.rs  main.rs  state.rs
