[package]
name = "CRUD-sqlx-potgres"
version = "0.1.0"
edition = "2021"
author = ["oday.S.H <oday8025@gmail.com"]

[dependencies]
anyhow = "1.0.89"
env_logger = "0.11.5"
log = "0.4.22"
prettytable = "0.10.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
